src/test/resources/invalidPrograms/fieldTypeExists.frj
class A {
	Foo bar;
}

main = 0;
